--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   shared_preferences: ^2.5.4
+  google_sign_in: ^7.2.0
+  firebase_core: ^4.4.0
+  firebase_auth: ^6.1.4
   
 
 dev_dependencies:
